testsuite/bsc.codegen/strings/CharLiteralBad_Empty.bsv
(* synthesize *)
module sysCharLiteralBad_Empty();
   rule r;
      Char c = "";
      $display(c);
   endrule
endmodule

